--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@biomejs/biome": "^2.2.5",
     "@types/node": "^24.3.0",
     "@types/thunderbird-webext-browser": "^127.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "barrelsby": "^2.8.1",
     "git-describe": "^4.1.1",
     "glob": "^10",
