--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint": "biome lint",
     "start": "web-ext run",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test:list": "vitest list",
     "test:sanity": "vitest run sanity",
     "test:ui": "vitest --ui",
@@ -40,6 +41,7 @@
     "fmt": "run format",
     "generate-index-ts": "run barrelsby",
     "index-ts": "run barrelsby",
+    "cov": "run test:coverage",
     "js": "run build-js",
     "tsdown": "run build-js",
     "watch": "run build-js --watch",
