--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.5",
+    "@codecov/rollup-plugin": "^1.9.1",
     "@types/node": "^24.3.0",
     "@types/thunderbird-webext-browser": "^127.0.0",
     "@vitest/coverage-v8": "^3.2.4",
