ci: send test results to Codecov

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,19 @@ jobs:
       run: corepack yarn run check-type
 
     - name: Test
-      run: corepack yarn test:coverage --reporter=github-actions
+      run: corepack yarn test:coverage --reporter=junit --reporter=github-actions
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: build/test/**/*.junit.xml
 
     - name: Bundle
       run: corepack yarn build-js
@@ -63,8 +75,3 @@ jobs:
         name: ext
         path: dist/ext/
         compression-level: 9
-
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
