--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -44,9 +44,16 @@ jobs:
       run: corepack yarn run check-type
 
     - name: Test
-      run: corepack yarn run test:coverage --reporter=github-actions
+      run: corepack yarn run test:coverage --reporter=junit --reporter=github-actions
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: build/test/**/*.junit.xml
