--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
       uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: build/test/**/*.junit.xml
+        files: build/test/result.junit.xml
 
     - name: Bundle
       run: corepack yarn build-js
