--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -56,4 +56,4 @@ jobs:
       uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: build/test/**/*.junit.xml
+        files: build/test/result.junit.xml
