ci: configure website with docsify

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -50,10 +50,16 @@ jobs:
       - name: Configure pages
         uses: actions/configure-pages@v4
 
+      - name: Add typedoc to site
+        run: mv build/doc/ .github/site/typedoc/
+
+      - name: Add markdown files to site
+        run: mv *.md doc/ ext/ .github/site/
+
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          path: build/doc
+          path: .github/site/
 
       - name: Deploy pages
         uses: actions/deploy-pages@v4
