--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'README.md'
       - 'doc/**/*'
+      - '.github/site/**/*'
       - '.github/workflows/doc.yml'
 jobs:
   build-doc:
