--- a/package.json
+++ b/package.json
@@ -72,13 +72,14 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.5",
     "@codecov/rollup-plugin": "^1.9.1",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^24.3.0",
     "@types/thunderbird-webext-browser": "^127.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "barrelsby": "^2.8.1",
     "git-describe": "^4.1.1",
     "glob": "^10",
-    "jsdom": "^26.1.0",
+    "jsdom": "^27.0.1",
     "rolldown": "latest",
     "toposort-class": "^1.0.1",
     "tsdown": "^0.15.9",
