--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
       run: corepack yarn exec web-ext lint --pretty --output=json
 
     - name: Create a source zip
-      run: corepack yarn run archive
+      run: make archive
 
     - run: npx changelogithub@13.16.0 --assets 'dist/*.xpi' --assets 'dist/*.zip'
       env:
